--- a/css/style-2.css
+++ b/css/style-2.css
@@ -47,7 +47,8 @@ header, main {
 
 section {
     background: #262930;
-    padding: 32px 16px;
+    padding: 64px 16px;
+    
 }
 
 section h1 {
@@ -60,6 +61,7 @@ section h1 {
 main {
     display: flex;
     padding: 32px 16px;
+    margin-top: 64px;
     gap: 32px;
 }
 
@@ -103,6 +105,7 @@ main {
 
 .illustration img {
     height: auto;
+    border-radius: 8px;
 }
 
 /* MODALE */
