--- a/css/style-2.css
+++ b/css/style-2.css
@@ -38,6 +38,7 @@ nav ul a:hover {
 
 img {
     max-width: 100%;
+    display: block;
 }
 
 header, main {
@@ -108,6 +109,17 @@ main {
     border-radius: 8px;
 }
 
+footer {
+    background-color: #f5f5f5;
+    text-align: center;
+    padding: 32px 16px;
+    margin-top: 64px;
+}
+
+footer p {
+    margin: 0;
+}
+
 /* MODALE */
 .modal {
     display: none;
@@ -166,5 +178,6 @@ main {
 
     .illustration ul {
         margin: 0;
+        gap:16px;
     }
 }
