--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,9 @@ nav ul a:hover {
 
 img {
     max-width: 100%;
+    display: block;
 }
+
 
 header, main {
     max-width: 1200px;
@@ -108,6 +110,17 @@ main {
     border-radius: 8px;
 }
 
+footer {
+    background-color: #f5f5f5;
+    text-align: center;
+    padding: 32px 16px;
+    margin-top: 64px;
+}
+
+footer p {
+    margin: 0;
+}
+
 /* MODALE */
 .modal {
     display: none;
@@ -153,7 +166,6 @@ main {
     color: #ccc;
   }
 
-
 @media (max-width: 700px) { /* se la finestra ha una larghezza minore di 400px, fai lo sfondo verde. Questa istruzione sovrascrive la precedente, se la cancello lo sfondo sarà sempre giallo */
     header {
         flex-direction: column;
@@ -171,5 +183,6 @@ main {
 
     .illustration ul {
         margin: 0;
+        gap:16px;
     }
 }
