--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,6 @@ main {
 
 .bio {
     width: 40%;
-    position: sticky;
 }
 
 .bio h2 {    
@@ -185,5 +184,9 @@ footer p {
     .illustration ul {
         margin: 0;
         gap:16px;
+    }
+
+    .sticky {
+        position: static;
     }
 }
